@@ -13,6 +13,7 @@ Wing::Role::Result::PrivilegeControlled - Make your Wing objects controllable by
  with 'Wing::Role::Result::PrivilegeControlled';
  
  __PACKAGE__->wing_controlled_by_privilege('pizza_manager');
+ __PACKAGE__->wing_viewed_by_privilege('pizza_employee');
 
 =head1 DESCRIPTION
 
@@ -25,6 +26,17 @@ sub wing_controlled_by_privilege {
     my $is_method_name = 'is_'.$privilege_name;
 
     $class->meta->add_around_method_modifier( can_edit => sub {
+        my ($orig, $self, $user) = @_;
+        return 1 if (defined $user && $user->$is_method_name);
+        return $orig->($self, $user);
+    });
+}
+
+sub wing_viewed_by_privilege {
+    my ($class, $privilege_name) = @_;
+    my $is_method_name = 'is_'.$privilege_name;
+
+    $class->meta->add_around_method_modifier( can_view => sub {
         my ($orig, $self, $user) = @_;
         return 1 if (defined $user && $user->$is_method_name);
         return $orig->($self, $user);
